[metadata]
name = lil_histie
version = 0.0.1
license = MIT

[flake8]
# Recommend matching the black line length (default 88),
max-line-length = 88
extend-ignore = E203, W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88